# 2DPhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  app
include/collision/: AABB.hpp  Collision.hpp  Partitioning.hpp
include/core/: RigidBody.hpp  Transform.hpp  Vector2.hpp  World.hpp
include/glad/: glad.h
include/math/: Math.hpp
include/stats/: world_stats.hpp
include/visuals/: Visuals.hpp
src/: AABB.cpp  RigidBody.cpp  collision.cpp  main.cpp  visuals.cpp  world.cpp
